2016-10-25  Edward Jones  <ed.jones@embecosm.com>

	* FeatureExtract.cpp: Fix minor incompatibilites with gcc.

2016-09-19  Edward Jones  <ed.jones@embecosm.com>

	* Plugin.cpp: FeatureGroupID entries in the output file are
	marked with 'features', instead of 'feature_group'.

2016-09-19  Edward Jones  <ed.jones@embecosm.com>

	* FeatureExtract.cpp: Fix indentation.
	* Plugin.cpp: Likewise.

2016-09-19  Edward Jones  <ed.jones@embecosm.com>

	* Plugin.cpp: FeatureGroupID Entries in the output file are
	marked with 'features', instead of 'feature_group'.

2016-08-15  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Rename feature_extract_gcc target to
	gcc_feature_extract

2016-08-02  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Update flag setting when building plugin.

2016-08-02  Edward Jones  <ed.jones@embecosm.com>

	Add a feature extraction only plugin for GCC

	* AUTHORS: Added file.
	* CMakeLists.txt: Likewise.
	* COPYING: Likewise.
	* FeatureExtract.cpp: Likewise.
	* FeatureExtract.h: Likewise.
	* Features.h: Likewise.
	* Plugin.cpp: Likewise.
	* Plugin.h: Likewise.
	* README: Likewise.